Начало создания header

--- a/src/pug/pages/ui-kit/form-elements.pug
+++ b/src/pug/pages/ui-kit/form-elements.pug
@@ -1,4 +1,5 @@
 //Страница form-elements
 body 
-    include ../form/text-field.pug
-    
+    include ../components/form/text-field.pug
+    +fieldWrapper("Текст", "", "textfield")
+    +fieldWrapper("Текст", "", "dropdown")
