--- a/src/styles/colorsAndTypes.scss
+++ b/src/styles/colorsAndTypes.scss
@@ -28,11 +28,9 @@ h3 {
 	font-weight: bold;
 	font-size: 12px;
 	line-height: 15px;
+	text-transform: uppercase;
 }
 
-* {
-	box-sizing: border-box;
-}
 
 body {
 	background-color: rgb(255, 255, 255);
