--- a/src/styles/form-elements.scss
+++ b/src/styles/form-elements.scss
@@ -1,8 +1,7 @@
-@import "colorsAndTypes.scss";
-
 .field-wrapper {
 	display: flex;
 	flex-direction: column;
+    // margin: 10px auto;
 	width: 100%;
 
 	&__label {
