Улучшение кода текстовых полей

--- a/src/common/styles/index.scss
+++ b/src/common/styles/index.scss
@@ -2,4 +2,5 @@
 @import "../../components/text-field/text-field.scss";
 @import "general.scss";
 @import "../../components/header/header.scss";
+@import "../../components/label-wrapper/label-wrapper.scss";
 @import "../../pug/ui-kit/form-elements/form-elements.scss";
