--- a/src/common/styles/_colorsAndTypes.scss
+++ b/src/common/styles/_colorsAndTypes.scss
@@ -13,7 +13,19 @@ $purple: #bc9cff;
 $green: #6fcf97;
 
 //Type
-h1 {
+
+body {
+	background-color: rgb(255, 255, 255);
+	font-family: Montserrat;
+	font-size: 14px;
+	line-height: 24px;
+	font-style: normal;
+	font-weight: normal;
+	color: getDarkShadeColor("almost");
+}
+
+.h1 {
+	color: unset;
 	font-family: Montserrat;
 	font-style: normal;
 	font-weight: bold;
@@ -21,25 +33,9 @@ h1 {
 	line-height: 29px;
 }
 
-h2 {
+.h2 {
 	font-style: normal;
 	font-weight: bold;
 	font-size: 19px;
 	line-height: 23px;
-}
-
-h3 {
-	font-style: normal;
-	font-weight: bold;
-	font-size: 12px;
-	line-height: 15px;
-	text-transform: uppercase;
-}
-
-body {
-	background-color: rgb(255, 255, 255);
-	font-family: Montserrat;
-	font-size: 14px;
-	line-height: 24px;
-	color: getDarkShadeColor("almost");
 }
