--- a/src/pug/ui-kit/form-elements/form-elements.pug
+++ b/src/pug/ui-kit/form-elements/form-elements.pug
@@ -1,18 +1,19 @@
-//Страница form-elements
+//- Страница form-elements
 include ../../../components/text-field/text-field.pug
 //- ...
 - var Icon = require("./ui-kit/form-elements/expand_more.svg");
 section.section 
     .section__column
-        +fieldWrapper("Text Field", "", "textfield", "default")
-        +fieldWrapper("Text Field", "This is pretty awesome", "textfield", "hover/focus")
-        +fieldWrapper("Dropdown", "Сколько гостей", "dropdown")
-        +fieldWrapper("Text Field", "This is pretty awesome", "dropdown")
+        +fieldWrapper({labelText:"Text Field", inputValue:"This is pretty awesome", type:"textfield", labelInfo:"default"})
+        +fieldWrapper({labelText:"Text Field", inputValue:"This is pretty awesome", type:"textfield", labelInfo:"hover/focus"})
+        +fieldWrapper({labelText:"Dropdown", inputValue:"Сколько гостей", type:"dropdown"})
+        +fieldWrapper({labelText:"masked text field", type:"textfield", placeholder:"ДД.ММ.ГГГГ"})
         div.section__row 
-            +fieldWrapper("Text Field", "This is pretty awesome", "dropdown")
-            +fieldWrapper("Text Field", "This is pretty awesome", "dropdown")
-        +fieldWrapper("Text Field", "This is pretty awesome", "dropdown")
-        +fieldWrapper("Text Field", "This is pretty awesome", "dropdown")
+            +fieldWrapper({labelText:"date Dropdown", inputValue:"ДД.ММ.ГГГГ", type:"dropdown"})
+            +fieldWrapper({labelText:"date Dropdown", inputValue:"19.08.2019", type:"dropdown"})
+        +fieldWrapper({labelText:"filter date dropdown", inputValue:"19 авг - 23 авг", type:"dropdown"})
+        //- Добавить иконку
+        +fieldWrapper({labelText:"subscription text field", type:"textfield", placeholder:"Email"})
     .section__column
         +fieldWrapper("Text Field", "", "textfield")(labelInfo="default")
         +fieldWrapper("Text Field", "This is pretty awesome", "textfield")(labelInfo="hover-focus")
