Добавил radio-button, обновил структуру

--- a/src/common/styles/index.scss
+++ b/src/common/styles/index.scss
@@ -20,6 +20,7 @@
 @import "../../components/check-box-list/check-box-list.scss";
 @import "../../components/check-box/check-box.scss";
 @import "../../components/check-box-wrapper/check-box-wrapper.scss";
+@import "../../components/radio-button-list/radio-button-list.scss";
 // @import "../../components/check-box-wrapper/__label/check-box-wrapper__label.scss";
 @import "../../components/header/header.scss";
 @import "../../components/label-wrapper/label-wrapper.scss";
