--- a/src/components/input-wrapper/__input/input-wrapper__input.pug
+++ b/src/components/input-wrapper/__input/input-wrapper__input.pug
@@ -1,2 +1,2 @@
 mixin inputWrapper__input(options)
-    input.input-wrapper__input(value=options.inputValue, placeholder=options.placeholder, readonly)(class!="input-wrapper__input_" + options.type)
+    input.input-wrapper__input(class="input-wrapper__input_" + options.type, value=options.inputValue, placeholder=options.placeholder, readonly)
