--- a/src/components/check-box-wrapper/check-box-wrapper.pug
+++ b/src/components/check-box-wrapper/check-box-wrapper.pug
@@ -1,5 +1,6 @@
 include ./__label/check-box-wrapper__label
-
-mixin checkBox(checkBoxData)
+include ../check-box/check-box.pug
+mixin checkBoxWrapper(checkBoxData)
     .check-box-wrapper
+        +checkBox(checkBoxData)
         +checkBoxWrapper__label(checkBoxData)
