--- a/src/components/radio-button/radio-button.scss
+++ b/src/components/radio-button/radio-button.scss
@@ -1,3 +1,23 @@
-.radio-button{
-    appearance: none;
+.radio-button {
+	appearance: none;
+	cursor: pointer;
+	width: 20px;
+	height: 20px;
+	border-radius: 10px;
+	background: #ffffff;
+	border: 1px solid rgba(31, 32, 65, 0.25);
+	&:checked {
+		border: 1px solid #bc9cff;
+		&::after {
+			content: "";
+            position: relative;
+            display: block;
+            left: 3.5px;
+            top:3.5px;
+			width: 12px;
+			height: 12px;
+			background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+			border-radius: 10px;
+		}
+	}
 }
