--- a/src/components/radio-button-list-wrapper/radio-button-list-wrapper.pug
+++ b/src/components/radio-button-list-wrapper/radio-button-list-wrapper.pug
@@ -1,6 +1,6 @@
-include ../label/label.pug
+include ../label-wrapper/label-wrapper.pug
 include ../radio-button-list/radio-button-list.pug
 mixin radioButtonListWrapper(options)
     .radio-button-list-wrapper
-        +label({labelText:options.label})
+        +labelWrapper({labelText:options.label})
         +radioButtonList(options)
