--- a/src/components/radio-button-list/radio-button-list.pug
+++ b/src/components/radio-button-list/radio-button-list.pug
@@ -1,4 +1,4 @@
-include ../label/label.pug
+include ../label-wrapper/label-wrapper.pug
 include ../radio-button-wrapper/radio-button-wrapper.pug
 mixin radioButtonList(options)
     .radio-button-list
