Обновил структуру с радио кнопками

--- a/src/components/radio-button-list-wrapper/__radio-button-list/radio-button-list-wrapper__radio-button-list.pug
+++ b/src/components/radio-button-list-wrapper/__radio-button-list/radio-button-list-wrapper__radio-button-list.pug
@@ -1,6 +1,6 @@
-include ../label-wrapper/label-wrapper.pug
-include ../radio-button-wrapper/radio-button-wrapper.pug
-mixin radioButtonList(options)
+include ../../label-wrapper/label-wrapper.pug
+include ../../radio-button-wrapper/radio-button-wrapper.pug
+mixin radioButtonListWrapper__radioButtonList(options)
     .radio-button-list
         -for (var radioButtonData of options.radioButtonsDataCollection)
             +radioButtonWrapper({radioButtonData:radioButtonData, name:options.name})
