--- a/src/common/styles/index.scss
+++ b/src/common/styles/index.scss
@@ -21,6 +21,9 @@
 @import "../../components/check-box-wrapper/__check-box/check-box-wrapper__check-box.scss";
 @import "../../components/radio-button-list-wrapper/__radio-button-list/radio-button-list-wrapper__radio-button-list.scss";
 @import "../../components/radio-button-wrapper/__radio-button/radio-button-wrapper__radio-button.scss";
-/* @import "../../components/check-box-wrapper/__label/check-box-wrapper__label.scss";*/
+@import "../../components/toggle-list-wrapper/__toggle-list/toggle-list-wrapper__toggle-list.scss";
+@import "../../components/toggle-wrapper/toggle-wrapper.scss";
+@import "../../components/toggle-wrapper/__toggle/toggle-wrapper__toggle.scss";
+/*@import "../../components/check-box-wrapper/__label/check-box-wrapper__label.scss"; */
 @import "../../components/header/header.scss";
 @import "../../components/label-wrapper/label-wrapper.scss";
