--- a/src/common/styles/index.scss
+++ b/src/common/styles/index.scss
@@ -24,6 +24,8 @@
 @import "../../components/toggle-list-wrapper/__toggle-list/toggle-list-wrapper__toggle-list.scss";
 @import "../../components/toggle-wrapper/toggle-wrapper.scss";
 @import "../../components/toggle-wrapper/__toggle/toggle-wrapper__toggle.scss";
-/*@import "../../components/check-box-wrapper/__label/check-box-wrapper__label.scss"; */
+@import "../../components/like-button/like-button.scss";
+@import "../../components/like-button-list-wrapper/__like-button-list/like-button-list-wrapper__like-button-list.scss";
+@import "../../components/like-button/__icon/like-button__icon.scss";
 @import "../../components/header/header.scss";
 @import "../../components/label-wrapper/label-wrapper.scss";
