--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,2 +1,4 @@
+link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+
 include ui-kit/form-elements/form-elements.pug
 //- include ui-kit/HeadersAndFooter.pug
